nodeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: sre-challenge-app-service
  labels:
    app: sre-challenge-app
spec:
  type: NodePort
  selector:
    app: sre-challenge-app
  ports:
    - port: 8080            # Porta interna do serviço
      targetPort: 8080      # Porta no container
      nodePort: 31939       # Porta externa (opcional, dentro de 30000-32767)
